2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in ($am_file): Be `local', as my'd variables used in
	`foreach' loops are always private to the loop.

2001-02-26  Pavel Roskin  <proski@gnu.org>

	* Makefile.am: Add install.am.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&target_cmp, &dist_cmp): Do not prototype comparing
	routines, otherwise the elements to compare are passed in @_
	instead of $a and $b.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (%required_targets): `installcheck-am' is needed.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&transform_cond): Merge into...
	(&transform): this.
	Adjust all uses.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_dist): Use &transform instead of dedicated
	magic for DISTDIRS.
	But be sure to always do it.
	* distdir.am: Adjust.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in: Use File::Basename.
	(&dirname, &basename): Remove.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in ($me): New.
	Use it.
	(&usage): Display your full name.


2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.texi (Invoking Automake): Remove dead options.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_texinfo_file): Also compute the list of files
	to clean.
	Handle local errors.
	(&handle_texinfo): Use it.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in: Don't pass arguments to...
	(&parse_arguments): Work on @ARGV.
	Use Getopt.
	Add support for `-f'.
	(&version): New.
	(&usage): Update.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
	handle installcheck and installcheck-am.
	* install.am: Do it.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
	handle install and install-am.
	* install.am: Do it.

2001-02-26  Akim Demaille  <akim@epita.fr>
