@@ -29,8 +29,7 @@ DVIPS = dvips
 ## `install-info' for the user.
 ?INSTALL-INFO?_am_installdirs += $(DESTDIR)$(infodir)
 .PHONY: install-info-am
-?EXEC??INSTALL-INFO?insexec-data-am: install-info-am
-?!EXEC??INSTALL-INFO?install-data-am: install-info-am
+?INSTALL-INFO?install-data-am: install-info-am
 install-info-am: $(INFO_DEPS)
 	@$(NORMAL_INSTALL)
 	$(mkinstalldirs) $(DESTDIR)$(infodir)
