@@ -1,5 +1,10 @@
 2001-02-26  Akim Demaille  <akim@epita.fr>
 
+	* texinfos.am: No ?EXEC? hook as currently installing TEXINFOS is
+	necessarily in infodir.
+
+2001-02-26  Akim Demaille  <akim@epita.fr>
+
 	* automake.in ($am_file): Be `local', as my'd variables used in
 	`foreach' loops are always private to the loop.
 
